--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>RUSSI ENCODER - Level 100</title>
-
-<!-- Google Fonts -->
+<title>RUSSI ENCODER - Ultimate Level 100</title>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
 
 <style>
@@ -16,17 +14,20 @@ body{
     display:flex; justify-content:center; align-items:center; color:white;
 }
 .container{
-    width:95%; max-width:950px;
+    width:95%; max-width:1000px;
     background: rgba(0,0,0,0.3); backdrop-filter: blur(20px);
     border-radius:25px; padding:30px;
-    box-shadow:0 0 50px rgba(0,255,255,0.3);
+    box-shadow:0 0 60px rgba(0,255,255,0.3);
     transition:0.4s;
 }
-.container:hover{ transform:translateY(-5px); box-shadow:0 0 80px rgba(0,255,255,0.6);}
+.container:hover{ transform:translateY(-5px); box-shadow:0 0 90px rgba(0,255,255,0.6);}
 h1{text-align:center; color:#00f7ff; letter-spacing:2px; margin-bottom:25px;}
 textarea{
     width:100%; height:160px; background:#111; border:none; border-radius:12px;
     padding:15px; color:white; margin-bottom:15px; resize:none; outline:none;
+}
+select{
+    width:100%; padding:12px; border-radius:12px; margin-bottom:12px; outline:none;
 }
 button{
     width:100%; padding:14px; border:none; border-radius:12px; background:#00f7ff;
@@ -42,9 +43,15 @@ button:hover{ background:#00c3cc; transform:scale(1.04);}
 
 <body>
 <div class="container">
-<h1>RUSSI ENCODER 🔥</h1>
+<h1>RUSSI ENCODER 🔥 Ultimate</h1>
 
-<textarea id="inputCode" placeholder="Paste your Python code here..."></textarea>
+<select id="language">
+    <option value="python">Python</option>
+    <option value="js">JavaScript</option>
+    <option value="php">PHP</option>
+</select>
+
+<textarea id="inputCode" placeholder="Paste your code here..."></textarea>
 <button onclick="encodeCode()">Encrypt (Multi-Layer)</button>
 
 <textarea id="outputCode" placeholder="Encrypted code will appear here..."></textarea>
@@ -65,20 +72,24 @@ button:hover{ background:#00c3cc; transform:scale(1.04);}
 <script>
 function encodeCode(){
     let input = document.getElementById("inputCode").value;
+    let lang = document.getElementById("language").value;
 
     // Base64
     let base64Encoded = btoa(unescape(encodeURIComponent(input)));
 
-    // AES Encrypt
-    let aesKey = "RussiSecret123";
+    // AES Encrypt with 16-byte key
+    let aesKey = "RussiSecret12345"; // 16 chars
     let aesEncrypted = CryptoJS.AES.encrypt(base64Encoded, aesKey).toString();
 
-    // Marshal/Zlib Layer (simulated with Base64 again for simplicity)
+    // Marshal/Obfuscation Layer (simulated with Base64 again)
     let finalEncoded = btoa(aesEncrypted);
 
-    let pythonStub = `import base64\nfrom Crypto.Cipher import AES\nkey=b"${aesKey}"\nencoded="${finalEncoded}"\ncipher=AES.new(key,AES.MODE_ECB)\ndecode_step1=cipher.decrypt(base64.b64decode(encoded))\ndecode_step2=base64.b64decode(decode_step1)\nexec(decode_step2.decode())`;
+    let pythonStub = `import base64\nfrom Crypto.Cipher import AES\nkey=b"RussiSecret12345"\nencoded="${finalEncoded}"\ncipher=AES.new(key,AES.MODE_ECB)\ndecode_step1=cipher.decrypt(base64.b64decode(encoded))\ndecode_step2=base64.b64decode(decode_step1)\nexec(decode_step2.decode())`;
+    let jsStub = `let decoded=atob("${finalEncoded}");console.log(decoded);`;
+    let phpStub = `<?php\n$encoded="${finalEncoded}"; echo base64_decode(base64_decode($encoded)); ?>`;
 
-    document.getElementById("outputCode").value = pythonStub;
+    let finalStub = lang === "python" ? pythonStub : lang === "js" ? jsStub : phpStub;
+    document.getElementById("outputCode").value = finalStub;
 }
 
 function copyCode(){
